fixed the x overflow on mobile

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -42,6 +42,11 @@ $apex-orange: #ff8d42;
     font-family: Arial, Helvetica, sans-serif;
   }
 
+html, body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
 body {
     background-color: $apex-blue;
 }
